# JurisPeru

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  client.py  config.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
api-service/: .coverage  .dockerignore  Dockerfile.prod  Makefile  config.example.yaml  pyproject.toml
api-service/src/app/: deps.py  logging_config.py  main.py
api-service/src/app/api/routes/: ask.py
api-service/src/app/configs/: config.py
api-service/src/app/prompts/: ask.py
api-service/src/app/schemas/: ask.py
api-service/src/app/services/: rag_service.py  retrieval_service.py
api-service/tests/: test_ask.py
frontend/: Dockerfile.prod  Makefile  config.example.yaml  pyproject.toml
frontend/src/app/: config.py  main.py
frontend/src/app/services/: utils.py
frontend/tests/: test_main.py
ingest-pipeline/: .gitignore  Makefile  config.example.yaml  pyproject.toml
ingest-pipeline/src/pipelines/config/: logging.py  settings.py
ingest-pipeline/src/pipelines/embeddings/: Embeddings.py
ingest-pipeline/src/pipelines/loaders/: base.py  pdf_loader.py
ingest-pipeline/src/pipelines/orchestration/: pipeline.py
ingest-pipeline/src/pipelines/processors/: text_processor.py
ingest-pipeline/src/pipelines/storage/: storage_manager.py
ingest-pipeline/src/pipelines/storage/vectors_db/: chroma.py  pinecone.py
lib_utils/: .dockerignore  Makefile  pyproject.toml
lib_utils/src/lib_utils/vector_database/: pinecone.py
shared/: pyproject.toml
shared/src/shared/interfaces/: vector_store.py
shared/src/shared/vector_database/: pinecone.py
src/app/: main.py
src/app/api/routes/: health.py
src/app/configs/: config.py
