[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rag-system"
version = "0.1.0"
description = "RAG Robusto"
authors = ["Raúl Casanova raul.casanova.03@gmail.com"]
readme = "README.md"
packages = [
    { include = "lib_utils", from = "lib_utils/src" },
    { include = "app", from = "api-service/src" },
    { include = "pipelines", from = "ingest-pipeline/src" }
]

# Main dependencies (exists 2+ subprojects)
[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain = "^0.3.27"
langchain-anthropic = "^0.3.19"
langchain-huggingface = "^0.3.1"
langchain-chroma = "^0.2.5"
langchain-pinecone = "^0.2.11"
langchain-community = "^0.3.27"
sentence-transformers = "^5.1.0"
pydantic-settings = "^2.10.1"

# Api dependencies
langsmith = "^0.4.16"
streamlit = "^1.48.1"
yaml-settings-pydantic = "^2.3.2"

[tool.poetry.group.api.dependencies]
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.11.7"

# Ingest-Pipeline dependencies
[tool.poetry.group.ingest.dependencies]
pypdf = "^6.0.0"
pinecone = "^7.3.0"
prefect = "^3.4.14"

# Dev dependencies (for testing, format, etc)
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.9"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.3.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
