[tool.poetry]
name = "about-law"
version = "0.1.0"
description = "Aplicación para consultar sobre códigos penales, civiles, etc."
authors = ["Raúl Casanova raul.casanova.03@gmail.com"]
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = "^1.49.1"
yaml-settings-pydantic = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.9"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
