[tool.poetry]
name = "lib_utils"
version = "0.1.0"
authors = ["Raúl Casanova raul.casanova.03@gmail.com"]
packages = [{ include = "lib_utils", from = "src" }]
include = ["src/lib_utils/py.typed"]

[tool.poetry.dependencies]
python = "3.13.*"
langchain = "~0.3.27"
langchain-anthropic = "~0.3.19"
langchain-huggingface = "~0.3.1"
langchain-chroma = "~0.2.5"
langchain-pinecone = "~0.2.11"
langchain-community = "~0.3.29"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.9"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.3.0"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
