[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "shared"
version = "0.1.0"
description = "RAG Shared"
authors = ["Raúl Casanova raul.casanova.03@gmail.com"]
readme = "README.md"
packages = [
    { include = "shared", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain = "^0.3.27"
langchain-anthropic = "^0.3.19"
langchain-huggingface = "^0.3.1"
langchain-chroma = "^0.2.5"
langchain-pinecone = "^0.2.11"
langchain-community = "^0.3.27"
sentence-transformers = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.9"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.3.0"


[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
